my-app/templates/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: { { .Values.api.image } }
          volumeMounts:
            - name: cm-api-python
              mountPath: "/app/config"
              readOnly: true
          ports:
            - containerPort: 5000
      volumes:
        - name: cm-api-python
          configMap:
            name: cm-api-python

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-ui-deployment
  labels:
    app: front-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-ui
  template:
    metadata:
      labels:
        app: front-ui
    spec:
      containers:
        - name: front-ui
          image: { { .Values.ui.image } }
          ports:
            - containerPort: 80

---
