my-app/templates/Service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: api-test-service
spec:
  selector:
    app: python
  ports:
    - port: 5000

---

kind: Service
apiVersion: v1
metadata:
  name: ui-test-service
spec:
  selector:
    app: front-ui
  ports:
    - port: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
    - port: 3306

---

kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
    - port: 6379

---
